--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-/* -------------------------------- 
+/* --------------------------------
 Primary style
 -------------------------------- */
 
@@ -15,7 +15,7 @@ Primary style
 
 body {
   font-size: 100%;
-  font-family: "Droid Sans", "Roboto", sans-serif;
+  font-family: "Convergence", "Roboto", sans-serif;
   color: #3d3536;
   background-color: white;
 }
@@ -34,11 +34,11 @@ a {
 	font-family: "Droid Sans";
 }*/
 
-/* -------------------------------- 
+/* --------------------------------
 Modules
 -------------------------------- */
 
-/* -------------------------------- 
+/* --------------------------------
 First Page
 -------------------------------- */
 
@@ -53,25 +53,25 @@ First Page
 }
 
 .btn-primary {
-	background-color: #00A198;
-	border-color: #00A198;
+	background-color: #0595C1;
+	border-color: #0595C1;
   border-radius: 30px;
 }
 
 .btn-primary:hover {
-  background-color: #1b847d;
-  border-color: #1b847d;
+  background-color: #2988a5;
+  border-color: #2988a5;
   border-radius: 35px;
 }
 
 .btn-primary:focus {
-  background-color: #1b847d;
-  border-color: #1b847d;
+  background-color: #0595C1;
+  border-color: #0595C1;
   border-radius: 35px;
 }
 
 .btn-primary.focus, .btn-primary:focus {
-  box-shadow: 0 0 0 3px #1b847d;
+  box-shadow: 0 0 0 3px #0595C1;
 }
 
 .btn-lg {
@@ -80,13 +80,12 @@ First Page
 }
 
 .button-settings {
-  font-family: Droid Sans;
   margin-top: 80px;
   text-align: center;
 }
 
 
-/* -------------------------------- 
+/* --------------------------------
 Second Page
 -------------------------------- */
 
@@ -95,7 +94,7 @@ Second Page
   color: #000000;
 }
 
-/* -------------------------------- 
+/* --------------------------------
 3rd Page
 -------------------------------- */
 
@@ -125,23 +124,23 @@ Second Page
   color:#7fe0d9;
 }
 
-/* -------------------------------- 
+/* --------------------------------
 Trash
--------------------------------- 
+--------------------------------
 
 .credits span {
   display: inline-block;
 }
 
 /*.cd-container {
-   this class is used to give a max-width to the element it is applied to, and center it horizontally when it reaches that max-width 
+   this class is used to give a max-width to the element it is applied to, and center it horizontally when it reaches that max-width
   width: 90%;
   max-width: 768px;
   margin: 0 auto;
 }
 
 /*.cd-container::after {
-   clearfix 
+   clearfix
   content: '';
   display: table;
   clear: both;
